<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_shade_1">

        <TextView
            android:id="@+id/idTVHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_items_to_cart"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="4dp"
            android:layout_margin="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/idTVHeading">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputEditTextTheme"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEditItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_item_name"
                    android:inputType="text"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputEditTextTheme"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEditItemQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_item_quantity"
                    android:inputType="number"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputEditTextTheme"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEditItemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_item_price"
                    android:inputType="number"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>


            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:weightSum="2">


                <Button
                    android:id="@+id/idBtnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="@string/cancel"
                    android:background="@drawable/custom_button_back"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/idBtnAdd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="@string/add"
                    android:background="@drawable/custom_button_back"
                    android:textAllCaps="false" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>